# Bank_Management_System

./: CMakeLists.txt  build_and_run.bat  main.cpp
